tests/paczka1/small_fuzzy/82245366.err
Error in line 1: nl70j S589 47,5
Error in line 12: MMst S699 72,22
Error in line 14: x23VknzvSD S699 22,1
